<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RootLayoutBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/RootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/menu_color_background"
            android:orientation="vertical"
            android:weightSum="10.3">

            <TextView
                android:id="@+id/menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fontFamily="@font/itim_cyrillic"
                android:shadowColor="@color/menu_color_text_shadow"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="1.5"
                android:text="@string/main_menu_text"
                android:textColor="@color/menu_color_title"
                android:layout_weight="0.3"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height ="0dp"/>

            <LinearLayout
                android:id="@+id/menu_item_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_item11"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:shadowColor="@color/menu_shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1.5"
                    android:text="@string/menu_item_11"
                    android:textColor="@color/menu_color_2"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/menu_item12"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:shadowColor="@color/menu_shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1.5"
                    android:text="@string/menu_item_12"
                    android:textColor="@color/menu_color_2"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height ="0dp"/>

            <LinearLayout
                android:id="@+id/menu_item_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/menu_item21"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:shadowColor="@color/menu_shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1.5"
                    android:text="@string/menu_item_21"
                    android:textColor="@color/menu_color_2"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/menu_item22"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:shadowColor="@color/menu_shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1.5"
                    android:text="@string/menu_item_22"
                    android:textColor="@color/menu_color_2"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height ="0dp"/>

            <LinearLayout
                android:id="@+id/menu_item_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_item31"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:shadowColor="@color/menu_shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1.5"
                    android:text="@string/menu_item_31"
                    android:textColor="@color/menu_color_2"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/menu_item32"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:shadowColor="@color/menu_shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1.5"
                    android:text="@string/menu_item_32"
                    android:textColor="@color/menu_color_2"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <View
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height ="0dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/menu_item_41"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/itim_cyrillic"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1.5"
                    android:text="@string/menu_item_41"
                    android:textColor="@color/menu_color_title"
                    android:layout_margin="8dp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/menu_item_42"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/itim_cyrillic"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1.5"
                    android:text="@string/menu_item_42"
                    android:textColor="@color/menu_color_title"
                    android:layout_margin="8dp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/RootLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/desc"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/menu_color_background"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/closeCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/CloseFirstlaunchCrossDescription"
                app:srcCompat="@mipmap/ic_close_black_48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/menu_color_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/explanation"
                android:textColor="@color/desc_color"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/RootLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/etiquette_1549399_xl"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3.5" />

        <TextView
            android:id="@+id/bigTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/gregory"
            android:gravity="center_horizontal|center_vertical"
            android:shadowColor="@color/splash_shadow_color"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1.5"
            android:text=" GOOD MORNING "
            android:textColor="@color/splash_color"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3.5" />
    </LinearLayout>

</FrameLayout>
